Reorganized the spellcasting page, Added spell tooltips. BugFixes Fixed a spellcasting bug that always had the casting level at 1. Bugfix on some green text in attack chats that should not have been highlighted green, In multiattacks Sneak Attack now only applies once.

--- a/lang/en.json
+++ b/lang/en.json
@@ -499,6 +499,7 @@
 		"classes": "Classes",
 		"classAbilities": "Class Abilites",
 		"arcane": "Arcane",
+		"arcaneMight": "Arcane Might",
 		"castingInformation": "Casting Information",
 		"spells": "Spells",
 		"spellsKnown": "Spells Known",
