Cleaned up some of the character sheet, added different sizes of AD to the roll section, added a pool for non-starting AD added some missing specialties from the Adventure Companion, bug fix for 'feat expert' options not properly applying to tricks.

--- a/lang/en.json
+++ b/lang/en.json
@@ -952,6 +952,10 @@
 		"newAdventure": "New Adventure",
 		"awardActionDie": "Award Action Dice",
 		"journal": "Journal Entry",
+		"additionalActionDice": "Additional Action Dice",
+		"graceUnderPressure": "Grace under Pressure",
+		"fortuneFavorsTheBold": "Fortune Favors the Bold",
+		"default": "Default",
 		"Dialog":
 		{
 			"requiresTargetWarningMessage": "You require a target for the selected Trick.",
